<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_blue_light"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView51"
        android:layout_width="1091dp"
        android:layout_height="1707dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/map_haikei" />

    <Button
        android:id="@+id/button01"
        android:layout_width="321dp"
        android:layout_height="60dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/redbutton"
        android:text="@string/f1"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView17" />

    <Button
        android:id="@+id/button02"
        android:layout_width="321dp"
        android:layout_height="60dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/silverbutton"
        android:text="@string/f2"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/button01"
        app:layout_constraintTop_toBottomOf="@+id/textView17" />

    <Button
        android:id="@+id/button03"
        android:layout_width="321dp"
        android:layout_height="60dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/purplebutton"
        android:text="@string/f3"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button01" />

    <Button
        android:id="@+id/button04"
        android:layout_width="321dp"
        android:layout_height="60dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/greenbutton"
        android:text="@string/f4"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/button03"
        app:layout_constraintTop_toBottomOf="@+id/button02" />

    <Button
        android:id="@+id/button05"
        android:layout_width="321dp"
        android:layout_height="60dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/yellowbutton"
        android:text="@string/f5"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button03" />

    <Button
        android:id="@+id/button06"
        android:layout_width="321dp"
        android:layout_height="60dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/orangebutton"
        android:text="@string/f6"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/button05"
        app:layout_constraintTop_toBottomOf="@+id/button04" />

    <Button
        android:id="@+id/buttonhelp"
        android:layout_width="211dp"
        android:layout_height="80dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:background="#FFFFB8D2"
        android:text="@string/help"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="941dp"
        android:layout_height="66dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/menu"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView12"
        android:layout_width="216dp"
        android:layout_height="266dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonhelp"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/hoiku" />

    <ImageView
        android:id="@+id/imageView15"
        android:layout_width="107dp"
        android:layout_height="163dp"
        android:layout_marginEnd="316dp"
        android:layout_marginRight="316dp"
        android:layout_marginTop="36dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button06"
        app:srcCompat="@drawable/game" />

    <ImageView
        android:id="@+id/imageView16"
        android:layout_width="141dp"
        android:layout_height="196dp"
        android:layout_marginEnd="468dp"
        android:layout_marginRight="468dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button06"
        app:srcCompat="@drawable/system" />

    <ImageView
        android:id="@+id/imageView17"
        android:layout_width="192dp"
        android:layout_height="182dp"
        android:layout_marginLeft="160dp"
        android:layout_marginStart="160dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button05"
        app:srcCompat="@drawable/product" />

    <ImageView
        android:id="@+id/imageView18"
        android:layout_width="160dp"
        android:layout_height="163dp"
        android:layout_marginTop="52dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button05"
        app:srcCompat="@drawable/visual" />

    <ImageView
        android:id="@+id/imageView20"
        android:layout_width="175dp"
        android:layout_height="181dp"
        android:layout_marginLeft="60dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button05"
        app:srcCompat="@drawable/iryou" />

    <ImageView
        android:id="@+id/imageView21"
        android:layout_width="232dp"
        android:layout_height="217dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintEnd_toStartOf="@+id/buttonhelp"
        app:layout_constraintHorizontal_bias="0.46"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button06"
        app:srcCompat="@drawable/business" />

    <ImageView
        android:id="@+id/imageView22"
        android:layout_width="115dp"
        android:layout_height="187dp"
        android:layout_marginEnd="388dp"
        android:layout_marginRight="388dp"
        android:layout_marginTop="44dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button06"
        app:srcCompat="@drawable/it" />

    <ImageView
        android:id="@+id/imageView23"
        android:layout_width="134dp"
        android:layout_height="233dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonhelp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.103"
        app:layout_constraintStart_toEndOf="@+id/button06"
        app:srcCompat="@drawable/kokusai" />

    <Button
        android:id="@+id/button_ホームへ"
        android:layout_width="156dp"
        android:layout_height="106dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="56dp"
        android:background="@drawable/image_home"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>